--- a/Cornerstone-1.4.2/lang/en.json
+++ b/Cornerstone-1.4.2/lang/en.json
@@ -4,7 +4,7 @@
     },
     "footer": {
         "brands": "Popular Brands",
-        "navigate": "Navigate",
+        "navigate": "Sitemap",
         "info": "Info",
         "categories": "Categories",
         "call_us": "Call us at {phone_number}",
@@ -674,10 +674,10 @@
         "comments": "Comments"
     },
     "newsletter": {
-        "subscribe": "Subscribe to our newsletter",
-        "subscribe_intro": "Get the latest updates on new products and upcoming sales",
-        "subscribe_submit": "Subscribe",
-        "email_placeholder": "Your email address",
+        "subscribe": "Subscribe",
+        "subscribe_intro": " ",
+        "subscribe_submit": "Ok",
+        "email_placeholder": "E-mail adress",
         "subscribed_heading": "Thanks for Subscribing!",
         "subscribed_heading_error": "Oops...",
         "subscribed_message": "Thank you for joining our mailing list. You'll be sent the next issue of our newsletter shortly",
@@ -685,7 +685,7 @@
         "unsubscribed_message": "You will no longer receive marketing emails from <b>{store_name}</b>"
     },
     "social": {
-        "connect": "Connect With Us"
+        "connect": "Follow Us"
     },
     "errors": {
         "shipping_quote_failure": "There was a problem retrieving your shipping quote",
@@ -694,7 +694,7 @@
     "search": {
         "quick_search": {
             "input_label": "Search",
-            "input_placeholder": "Search the store"
+            "input_placeholder": "Type what you Search"
         },
         "results": {
             "form_label": "Search Keyword:",
